# wmpy

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build-and-test.yml
docs/: Makefile
docs/examples/: integration.py  triangular.py
docs/plots/: intro.py  relu2d.py  relu3d.py
docs/source/: conf.py  development.rst  getstarted.rst  index.rst
examples/: example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example_aliases.py  example_board.py  example_convert.py  example_convert2.py  example_euf1.py  example_euf2.py  example_euf3.py  example_euf4.py  example_gaussians.py
examples/approx/: approx.py  small_square.py  small_square_dim.py  small_square_poly.py  small_squares_corners.py  triangle.py
src/wmpy/cli/: density.py
src/wmpy/cli/installers/: installer.py
src/wmpy/core/: utils.py
src/wmpy/integration/: latte.py  rejection.py
src/wmpy/solvers/: wmisolver.py
test/: numerical.py
test/integration/: wmisolver_test.py
