[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wmpy"
version = "1.0"
description = "WM*PY"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "wmpy team" }]
requires-python = ">=3.9.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "networkx",
    "numpy",
    "PySMT>=0.9.7.dev333",
    "scipy",
    "setuptools>=80.9.0",
    "z3-solver",
]

[project.urls]
Homepage = "https://github.com/unitn-sml/wmpy"
Repository = "https://github.com/unitn-sml/wmpy"

[project.optional-dependencies]
#nra = ["pysmt @ git+https://git@github.com/masinag/pysmt@nrat#egg=pysmt"]

[project.scripts]
wmpy = "wmpy.cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]

files = ["src/wmpy/"] # files to type check

[[tool.mypy.overrides]]
module = ["mathsat", "pysmt.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["test"]

[tool.coverage.run]
branch = true
source = ["src/"]
omit = ["src/wmpy/cli/*"]

[tool.coverage.report]
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "matplotlib>=3.9.4",
    "mypy>=1.18.2",
    "myst-parser>=3.0.1",
    "nbsphinx>=0.9.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
